force-app/main/default/objects/NEILON__S3_Link_Files_Migration__c/NEILON__S3_Link_Files_Migration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration to track jobs related to Salesforce Files migration into Amazon S3.</description>
    <label>S3-Link Files Migration</label>
</CustomObject>