force-app/main/default/objects/NEILON__S3_Link_Files_Migration__c/fields/NEILON__Cron_Expression__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Cron_Expression__c</fullName>
    <label>Cron Expression</label>
    <length>80</length>
    <type>Text</type>
</CustomField>