force-app/main/default/objects/NEILON__S3_Link_Files_Migration__c/fields/NEILON__Delete_Migrated_Salesforce_Files__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Delete_Migrated_Salesforce_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, salesforce files / attachments will be deleted after migration</inlineHelpText>
    <label>Delete Migrated Salesforce Files?</label>
    <type>Checkbox</type>
</CustomField>