force-app/main/default/objects/NEILON__S3_Link_Files_Migration__c/fields/NEILON__Job_Number__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Job_Number__c</fullName>
    <label>Job Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>