force-app/main/default/objects/NEILON__S3_Link_Files_Migration__c/fields/NEILON__Parent_Record_Age__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Parent_Record_Age__c</fullName>
    <inlineHelpText>Files related to parent record older then this will be migrated</inlineHelpText>
    <label>Parent Record Age(in days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>