force-app/main/default/objects/NEILON__S3_Link_Files_Migration__c/fields/NEILON__Parent_Records_Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Parent_Records_Where_Clause__c</fullName>
    <inlineHelpText>SOQL WHERE clause to filter parent records whose related files need to be migrated. For example for Case, IsClosed = true OR Priority= &apos;Low&apos;</inlineHelpText>
    <label>SOQL Where Clause(for Parent Records)</label>
    <type>TextArea</type>
</CustomField>