force-app/main/default/objects/NEILON__S3_Link_Files_Migration__c/fields/NEILON__Salesforce_Files_Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Salesforce_Files_Where_Clause__c</fullName>
    <inlineHelpText>SOQL WHERE clause to filter Salesforce Files / Attachments records which need to be migrated. For example, for ContentDocument, you can use ContentDocument.FileExtension = &apos;pdf&apos; and for Attachment, you can use BodyLength &gt; 1024</inlineHelpText>
    <label>SOQL Where Clause(for Salesforce Files)</label>
    <type>TextArea</type>
</CustomField>