force-app/main/default/objects/NEILON__S3_Link_Files_Migration__c/fields/NEILON__Schedule_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Schedule_Job_Id__c</fullName>
    <label>Schedule Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>