force-app/main/default/objects/NEILON__S3_Link_Files_Migration__c/fields/NEILON__Status__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>