force-app/main/default/objects/NEILON__S3_Link_Files_Migration__c/listViews/NEILON__All.listView-meta.xml
<ListView>
    <fullName>NEILON__All</fullName>
    <columns>NAME</columns>
    <columns>NEILON__File_Type__c</columns>
    <columns>NEILON__Object_Name__c</columns>
    <columns>NEILON__Parent_Record_Filter_Type__c</columns>
    <columns>NEILON__Parent_Record_Age__c</columns>
    <columns>NEILON__Parent_Records_Where_Clause__c</columns>
    <columns>NEILON__Salesforce_Files_Where_Clause__c</columns>
    <columns>NEILON__Delete_Migrated_Salesforce_Files__c</columns>
    <columns>NEILON__Is_Schedule__c</columns>
    <columns>NEILON__Cron_Expression__c</columns>
    <columns>NEILON__Is_Batches_Completed__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>